--- a/src/components/CreatePost/Createpost.module.css
+++ b/src/components/CreatePost/Createpost.module.css
@@ -7,6 +7,7 @@
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 2%;
 }
 
 .inputTitleContainer{
@@ -38,7 +39,7 @@ label{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-left: 2%;
     margin-bottom: 2%;
-    background-color: #E7F6F2;
+    background-color: white;
 }
 
 
