--- a/src/components/Myposts/MypostsContainer.module.css
+++ b/src/components/Myposts/MypostsContainer.module.css
@@ -1,4 +1,4 @@
-.PostContainer{
+.MypostsContainer{
     width: 90%;
     margin-left: auto;
     margin-right: auto;
@@ -10,7 +10,7 @@
     margin-bottom:5%;
 }
 
-.noPosts{
+.noMyposts{
     width: 70%;
     margin-left: auto;
     margin-right: auto;
@@ -27,13 +27,13 @@
 }
 
 @media screen and (max-width: 900px){
-    .PostContainer{
+    .MypostsContainer{
         grid-template-columns: 1fr 1fr;
     }
 }
 
 @media screen and (max-width: 620px){
-    .PostContainer{
+    .MypostsContainer{
         grid-template-columns: 1fr;
     }
 }
