--- a/src/components/Posts-Container/Post.module.css
+++ b/src/components/Posts-Container/Post.module.css
@@ -28,6 +28,7 @@
     margin-top: 3%;
     margin-bottom: 3%;
     margin-left: 3%;
+    width: 92%;
 }
 
 .PostTitle > p {
@@ -51,4 +52,8 @@
     cursor: pointer;
     font-weight: 500;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+}
+
+.readMore{
+    color: red;
 }
