added Edit post functionality

--- a/src/components/Modal/DeletePostModal.module.css
+++ b/src/components/Modal/DeletePostModal.module.css
@@ -24,7 +24,8 @@
     width: 100%;
     padding-top : 1rem;
     padding-bottom: 1rem;
-    background: #D61C4E;
+    /* background: #D61C4E; */
+    background : #80558C;
     color: white;
   }
   
@@ -34,7 +35,8 @@
   
   .modal__content {
     padding: 1rem 0.5rem;
-    color: #898AA6;
+    /* color: #898AA6; */
+    color: #CBA0AE;
     font-size: 1.2rem;
     font-weight: 500;
   }
@@ -45,7 +47,7 @@
   
   .btn{
     width: 100px;
-    background-color: #CA4E79;
+    background-color: #80558C;
     border : none;
     height: 40px;
     cursor: pointer;
