--- a/src/components/PostContent/PostContent.module.css
+++ b/src/components/PostContent/PostContent.module.css
@@ -1,5 +1,5 @@
 .PostContentContainer{
-    width : 90%;
+    width : auto;
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
