--- a/src/components/PostContent/PostContent.module.css
+++ b/src/components/PostContent/PostContent.module.css
@@ -1,11 +1,14 @@
 .PostContentContainer{
-    width : auto;
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
     margin-top: 1%;
     margin-bottom: 1%;
     padding: 40px;
+}
+
+.completePostPage{
+    width: 100%;
 }
 
 .PostHeader{
@@ -48,6 +51,10 @@
 
 .PostContent{
     width: 100%;
+}
+
+.PostContent  img {
+   width: 100%;
 }
 
 .author{
